Feat/elastic search (#40)
* start to implement elastic search

* working simple search with elastic search. Only for clubs now

* add global search on name and/or description for cities, clubs, groups and sports with auto fuzziness

* remove unecessary comment and unused import

* specified search on clubs, cities, groups or sports is now possible.

* save changes to views.py

* add some tests for search

* add no result and invalid tests

* updated to return objects matching django defined models

* Task/elastic docker (#38)

* Fix/azure (#32)

* Feat/groups (#20)

* add dotenv, move secret key to .env

* Feat/view club info (#10)

* Set up the project as studentidrettBackend with the app clubs. Added gitignore

* Fix/dependencies (#2)

* add requirements.txt for dependencies, update readme on how to use

* add rest_framework and clubs to installed apps

* update gitignore and GPG sign

* changed project name to backend

* Fix/dependencies (#2)

* add requirements.txt for dependencies, update readme on how to use

* add rest_framework and clubs to installed apps

* update gitignore and GPG sign

* fix directory structure to allow startapp, add extra level to make it prettier (#5)

* made working endpoints for getting

:wq
''

* changed views to wrapping api view

* class-based views

* added class based views and authentication

* removed highlight. should be correct now

* remove redudant code

* remove unused import

* removed url form fields in ClubSerializer

Co-authored-by: Jenny Yu <jennyjinyiyu@gmail.com>
Co-authored-by: eirsture <eirik.sture@gmail.com>

* Feat/navigate clubs (#8)

* add cities, simple API works

* start tests

* add test-suite for data in /cities

* add modelviewset, add tests

* add clubs with tests

* prettify

* add tests for non-existing objects

* Create django.yml (#12)

* Create django.yml

* fix path for requirements.txt

* fix path for man

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -29,13 +29,13 @@
       networks:
         - postgres_network
         - nginx_network
+        - elastic_network
       volumes:
         - .:/app
         - static_volume:/staticfiles
-      expose:
-        - 8000
       depends_on:
         - postgres
+        - elasticsearch
       command: bash -c "
         black --check . --config pyproject.toml &&
         isort --check-only . &&
@@ -43,6 +43,27 @@
         python manage.py makemigrations --check
         "
       # TODO: Add pytest when this is fixed
+
+    elasticsearch:
+      image: ${ACR}/studentidrett-backend:elastic-${IMAGE_VERSION}
+      build:
+        context: ./config/elasticsearch
+        dockerfile: Dockerfile
+      ulimits:
+        memlock:
+          soft: -1
+          hard: -1
+        nofile:
+          soft: 65536
+          hard: 65536
+      cap_add:
+      - IPC_LOCK
+      volumes:
+      - elasticsearch-data:/usr/share/elasticsearch/data
+      networks:
+      - elastic_network
+      ports:
+      - 9200:9200
 
     nginx:
       image: ${ACR}/studentidrett-backend:nginx-${IMAGE_VERSION}
@@ -63,9 +84,12 @@
     postgres_data:
     static_volume:
     media_volume:
+    elasticsearch-data:
 
   networks:
     postgres_network:
       driver: bridge
     nginx_network:
+      driver: bridge
+    elastic_network:
       driver: bridge
