--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -14,6 +14,29 @@
       networks:
         - postgres_network
 
+    elasticsearch:
+      image: elasticsearch
+      build:
+        context: ./config/elasticsearch
+        dockerfile: Dockerfile
+      environment:
+        ES_JAVA_OPTS: -Xms512m -Xmx512m
+      ulimits:
+        memlock:
+          soft: -1
+          hard: -1
+        nofile:
+          soft: 65536
+          hard: 65536
+      cap_add:
+        - IPC_LOCK
+      volumes:
+        - elasticsearch-data:/usr/share/elasticsearch/data
+      networks:
+        - elastic_network
+      ports:
+        - 9200:9200
+        
     web:
       container_name: nsi_backend
       volumes:
@@ -27,11 +50,11 @@
         dockerfile: config/django/Dockerfile
       depends_on:
         - postgres
-      expose:
-        - 8000
+        - elasticsearch
       networks:
         - postgres_network
         - nginx_network
+        - elastic_network
 
     nginx:
       image: nginx:latest
@@ -53,7 +76,11 @@
       driver: bridge
     nginx_network:
       driver: bridge
+    elastic_network:
+      driver: bridge
   volumes:
     postgres_data:
     static_volume:
     media_volume:
+    elasticsearch-data:
+      driver: local
