--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -20,6 +20,7 @@ Pillow==7.2.0
 # REST
 djangorestframework==3.11.1
 django-cors-headers==3.5.0
+django-filter==2.4.0
 
 # Swagger
 drf-yasg==1.17.1
