--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -49,6 +49,8 @@
       build:
         context: ./config/elasticsearch
         dockerfile: Dockerfile
+      environment:
+        ES_JAVA_OPTS: -Xms512m -Xmx512m
       ulimits:
         memlock:
           soft: -1
