update nginx and docker to serve media-files

--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -21,7 +21,7 @@ http {
         }
 
         location /media/ {
-            alias /media/;
+            alias /mediafiles/;
         }
 
         location / {
