--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -31,3 +31,9 @@ python-dotenv==0.14.0
 # Elastic search
 django-elasticsearch-dsl==7.1.4
 django-elasticsearch-dsl-drf==0.20.9
+
+# Pytest
+pytest-django==4.1.0
+
+# Factory boy
+factory_boy==3.1.0
