--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -41,9 +41,9 @@
         black --check . --config pyproject.toml &&
         isort --check-only . &&
         flake8 &&
-        python manage.py makemigrations --check
+        python manage.py makemigrations --check &&
+        pytest --cov
         "
-      # TODO: Add pytest when this is fixed
 
     elasticsearch:
       image: ${ACR}/studentidrett-backend:elastic-${IMAGE_VERSION}
