--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -43,7 +43,7 @@
         isort --check-only . &&
         flake8 &&
         python manage.py makemigrations --check &&
-        pytest --cov
+        python manage.py test
         "
 
     elasticsearch:
