update settings to use default on local dev without docker

--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -45,6 +45,9 @@
       - media_volume:/mediafiles
       env_file:
         - app/.env
+      environment:
+        ELASTICSEARCH: elasticsearch
+        POSTGRES_HOST: postgres
       build:
         context: .
         dockerfile: config/django/Dockerfile
