--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -38,13 +38,7 @@
       depends_on:
         - postgres
         - elasticsearch
-      command: bash -c "
-        black --check . --config pyproject.toml &&
-        isort --check-only . &&
-        flake8 &&
-        python manage.py makemigrations --check &&
-        pytest
-        "
+      command: ["./config/django/elastic.sh"]
 
     elasticsearch:
       image: ${ACR}/studentidrett-backend:elastic-${IMAGE_VERSION}
