--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -38,7 +38,7 @@
       depends_on:
         - postgres
         - elasticsearch
-      command: ["./config/django/elastic.sh"]
+      command: ["/usr/local/bin/elastic.sh"]
 
     elasticsearch:
       image: ${ACR}/studentidrett-backend:elastic-${IMAGE_VERSION}
