use pytest and factoryboy (#63)
* Begin replacing nose with pytest

* make testing with pytest and factory boy work

* make more factories

* add factory boy to tests for clubs, cities and groups

* create separate pytest settings, and fix coverage with pytest

* remove comments and add pytest to docker-compose

* remove unused imports and run black

* fix settings for github workflow

* change elasticsearch setting when github workflow

* attempt to fix github actions test error

* add elasicsearch env variable

* fix import

* change settings import to base

* edit settings import based on github actions or not

* attempt local:9200 for elasticsearch GHA

* move pytest settings to pyproject.toml

* change localhost to postgres

* revert postgres to localhost

* run python manage.py test instead of pytest

* update settings to use default on local dev without docker

* move elasticsearch settings into GHA if statement

* revert last commit

* add healthcheck for elasticsearch

* update file path

* remove unused env variables

* update reference to postgres_host and elasticsearch env variables

Co-authored-by: eolweus <37080270+eolweus@users.noreply.github.com>
Co-authored-by: Erling Olweus <erlingolweus@gmail.com>
Co-authored-by: Odd Andre Owren <oddandreowren@gmail.com>

--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -6,7 +6,9 @@ gunicorn==20.0.4
 
 # Test tools
 coverage==5.3
-
+pytest-django==4.1.0
+pytest-cov==2.10.1
+factory_boy==3.1.0
 
 # Code quality: Linting, formatting
 pre-commit==2.7.1
